adicionando interface gráfica